# lab1_ws

./: submission.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_py_pkg/lib/cpp_py_pkg/: talker.py
install/cpp_py_pkg/share/ament_index/resource_index/package_run_dependencies/: cpp_py_pkg
install/cpp_py_pkg/share/ament_index/resource_index/parent_prefix_path/: cpp_py_pkg
install/cpp_py_pkg/share/cpp_py_pkg/: lab1_launch.py  local_setup.sh  package.sh
log/: latest_build
src/cpp_py_pkg/: CMakeLists.txt  package.xml
src/cpp_py_pkg/include/cpp_py_pkg/: cpp_header.hpp
src/cpp_py_pkg/launch/: lab1_launch.py
src/cpp_py_pkg/scripts/: py_node.py  relay.py  talker.py
